fix: actualizacion de obelisco v1.48.1 y correncion de align-items

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -151,7 +151,7 @@ main {
       &.dont {
         margin-bottom: spaceUnits(4);
         display: flex;
-        align-items: start;
+        align-items: flex-start;
         gap: spaceUnits(2);
 
         &::before {
